Return photos with their resource
For resources return all images with style links
